Implemented both #edit and #update controller actions, and refactored controller with a 'before_action :set_spaceship' to keep the code dry - Also structure the edit view

--- a/app/views/spaceships/edit.html.erb
+++ b/app/views/spaceships/edit.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient px-5">
-  <%= link_to spaceships_path, class: "btn btn-outline-light" do %>
+  <%= link_to spaceship_path(@spaceship), class: "btn btn-outline-light" do %>
     <i class="fa-solid fa-rotate-left"></i> Return
   <% end %>
 </nav>
