--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -19,7 +19,8 @@
             <p class="card-text">Located in <%= spaceship.location %></p>
             <p class="card-text">Rated by users: <%= spaceship.rating %></p>
             <p class="card-text">€<%= spaceship.cost %>/day</p>
-            <a href="#" class="btn btn-primary">Select</a>
+            <%# <a href="/spaceship/:id" class="btn btn-primary">Select</a> %>
+            <%= link_to "Select", spaceship_path(spaceship) %>
           <% end %>
         </div>
       </div>
