added some links and buttons

--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -19,7 +19,9 @@
         </tbody>
       </table>
 
-      <%= link_to "See all spaceships", spaceships_path %>
+      <%= link_to "Return to all spaceships", spaceships_path %>
+      <%= link_to "Edit", spaceship_path(@spaceship) %>
+      <%= link_to "Delete", spaceship_path(@spaceship) %>
     </div>
   </div>
 </div>
