--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
   <div class="container">
     <h1>Get your/rent your <strong>spaceship</strong> to <strong>get to your favorate planet</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn btn-flat" href="#">Apply now</a>
+      <%= link_to "Discover all available spaceships", spaceships_path %>
+      <%= link_to "Post your spaceship", new_spaceship_path %>
   </div>
 </div>
