added link to edit

--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -20,7 +20,7 @@
       </table>
 
       <%= link_to "Return to all spaceships", spaceships_path %>
-      <%= link_to "Edit", spaceship_path(@spaceship) %>
+      <%= link_to "Edit", edit_spaceship_path(@spaceship) %>
       <%= link_to "Delete", spaceship_path(@spaceship) %>
     </div>
   </div>
