--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -21,7 +21,7 @@
 
       <%= link_to "Return to all spaceships", spaceships_path %>
       <%= link_to "Edit", edit_spaceship_path(@spaceship) %>
-      <%= link_to "Delete", spaceship_path(@spaceship) %>
+      <%= link_to "Delete", spaceship_path(@spaceship), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
     </div>
   </div>
 </div>
