--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,31 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<div id="outer">
+
+
+    <div id="home-top-video">
+
+      <div id="home-text">
+        <div class="centertext">
+          <h1 class= "my-4 text-center fw-bold">spaceshipsrus</h1>
+          <p>get your spaceships for you next travel</p>
+          <div>
+            <%= link_to "Discover spaceships", spaceships_path, class: "btn btn-outline-dark"  %>
+          </div>
+
+        </div>
+      </div>
+      <video autoplay loop muted width="100%">
+        <source src="https://vod-progressive.akamaized.net/exp=1708635110~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F3281%2F21%2F541408821%2F2567571716.mp4~hmac=a600d01d9a3c07bb5a705abd607ea578d0a622486051a2bd63ae193f1a77ac7f/vimeo-prod-skyfire-std-us/01/3281/21/541408821/2567571716.mp4?download=1&filename=pexels-kindel-media-7649283+%282160p%29.mp4
+"type="video/mp4" />
+        <source src="pexels-kindel-media.mp4" type="video/mp4" /> Your browser does not support the video tag. We suggest you upgrade your browser.
+      </video>
+    </div>
+  </div>
+
+
+
+<%# <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
   <div class="container">
     <h1>Get your/rent your <strong>spaceship</strong> to <strong>get to your favorate planet</strong>!</h1>
-      <%= link_to "Discover all available spaceships", spaceships_path %>
-      <%= link_to "Post your spaceship", new_spaceship_path %>
+
   </div>
-</div>
+</div> %>
