--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= render "shared/navbar" %>
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <h1><%= @spaceship.name %></h1>
