--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,30 @@
 
 //homepage
 @import "pages/index";
+
+.animated-link {
+  position: relative;
+  color: #0D6EFD;
+  text-decoration: none;
+}
+
+.animated-link:hover {
+  color: #0a4db1;
+}
+
+.animated-link::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0a4db1;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.animated-link:hover::before {
+  transform: scaleX(1);
+}
