--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -28,6 +28,13 @@
       <div class="d-flex">
         <h3>Would you like to book this spaceship? <strong><%= link_to "Do it here!", new_spaceship_booking_path(@spaceship), class: "animated-link" %></strong></h3>
       </div>
+      <ul class="list-group">
+        <% @spaceship.bookings.each do |booking| %>
+          <li class="list-group-item">
+            <i class="fa-regular fa-calendar-check"></i> <span style="font-weight: bold;"><%= booking.user.first_name %> <%= booking.user.last_name %></span> has booked this spaceship from <span style="font-weight: bold;"><%= booking.start_date %></span> to <span style="font-weight: bold;"><%= booking.end_date %></span>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
