--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
         <div class="centertext">
           <h1 class= "my-4 text-center fw-bold">spaceshipsrus</h1>
           <p>get your spaceships for you next travel</p>
-          <div>
+          <div class="centertext">
             <%= link_to "Discover spaceships", spaceships_path, class: "btn btn-outline-dark"  %>
           </div>
 
