--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,12 @@
 <div id="outer">
-
-
     <div id="home-top-video">
-
       <div id="home-text">
         <div class="centertext">
           <h1 class= "my-4 text-center fw-bold">spaceshipsrus</h1>
-          <p>get your spaceships for you next travel</p>
+          <p>get your spaceship for your next travel</p>
           <div class="centertext">
             <%= link_to "Discover spaceships", spaceships_path, class: "btn btn-outline-dark"  %>
           </div>
-
         </div>
       </div>
       <video autoplay loop muted width="100%">
