--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: linear-gradient(180deg, rgba(0,0,0,.5) 0%, rgba(139, 139, 139, 0.565) 76%, rgba(255,255,255,0) 100%);
 }
 
 .navbar-lewagon .navbar-collapse {
