--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,82 @@
 // Import page-specific CSS files here.
-@import "home";
+.outer {
+  margin: 0;
+  background-image: asset-url('background.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-input-search {
+  width: 306px;
+  height: 60px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: white;
+  color: gray;
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 0 auto;
+  vertical-align: middle;
+  text-align: center;
+}
+
+
+.btn-search {
+  padding: 8px 16px;
+  border-radius: 15px;
+  background: #000;
+  color: #F5F5F5;
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  margin: 0 auto;
+  border: 1px solid #F5F5F5;
+  text-decoration: none;
+}
+
+.card {
+  height: 400px;
+  border-radius: 15px;
+  border: 1px solid #000;
+  font-family: 'Space Grotesk', sans-serif;
+  background-color: transparent;
+}
+
+.card-body {
+  padding: 20px;
+  color: #F5F5F5;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.spaceship-image {
+  width: 100%;
+  height: 200px;
+  border-radius: 15px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 16px;
+}
+
+.spaceship-card-link {
+  text-decoration: none;
+  color: #F5F5F5;
+}
+
+.name-rating {
+  display: flex;
+  justify-content: space-between;
+}
