--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -1,5 +1,13 @@
-<div class="container">
-  <%= render "shared/navbar" %>
+<%= render "shared/navbar" %>
+
+<div class= "subnav py-2 ps-2">
+  <%= link_to spaceships_path, class: "return" do %>
+    <i class="fa-solid fa-angle-left"></i><span style="opacity: 0">-</span> <span>Return to all spaceships</span>
+  <% end %>
+</div>
+
+<!--
+<div class="container mt-3">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <h1><%= @spaceship.name %></h1>
@@ -39,3 +47,4 @@
     </div>
   </div>
 </div>
+-->
