added styling to navbar, index and fonts in general

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,6 +4,8 @@
   background-image: asset-url('background.jpg');
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .btn-container {
