--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,11 +4,55 @@
       <div id="home-text">
         <div class="mainbox">
           <div class="subbox-1">
-          <h1><%= current_user.first_name%></h1>
+
+              <div class="subbox-50">
+                <h3 class ="my-3">Your spaceship</h3>
+                  <%=link_to "+", new_spaceship_path%>
+                  <div class="displayflex my-5">
+                    <% @user_spaceship.each do |spaceship| %>
+                      <div class="cardusershow">
+                        <img class="spaceshipcircle"  src="<%= spaceship.image_url %>" />
+
+                        <p><%= spaceship.name %></p>
+                         <%if spaceship.bookings.count == 0 %>
+                          <p class="text-danger">Not Booked</p>
+                          <% else %>
+                          <p class="text-success">Booked</p>
+                          <% end %>
+                      </div>
+                    <% end %>
+                  </div>
+              </div>
+              <div class="subbox-50">
+                <h3 class ="my-3">Your Booking</h3>
+                  <%= link_to "+", spaceships_path %>
+                    <div class="displayflex my-5">
+                      <% @user_bookings.each do |booking| %>
+                      <div class="cardusershow">
+                        <img class="spaceshipcircle"  src="<%= booking.spaceship.image_url %>" />
+
+                      </div>
+                      <% end %>
+
+
+
+                    </div>
+
+
+            </div>
           </div>
           <div class="subbox-2">
-
-          <h1><%= @current_user.first_name%></h1>
+          <h3>Your information</h3>
+          <p class ="my-1">First Name:</p>
+          <p class ="mb-2"><strong><%= current_user.first_name%></strong></p>
+          <p class ="my-1">Last Name:</p>
+          <p class ="mb-2"><strong><%= current_user.last_name%></strong></p>
+          <p class ="my-1">Email:</p>
+          <p class ="mb-2"><strong><%= current_user.email%></strong></p>
+          <p class ="my-1">number of ship:</p>
+          <p class ="mb-2"><strong><%= @user_spaceship.count%></strong></p>
+          <p class ="my-1">number of booking:</p>
+          <p class ="mb-2"><strong><%= @user_bookings.count%></strong></p>
           </div>
         </div>
       </div>
