--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,15 +19,40 @@
 .btn-rent {
   padding: 8px 30px;
   border-radius: 15px;
-  background: #000;
   color: #F5F5F5;
+  background-color: #f5f5f542;
   font-family: 'IBM Plex Sans Condensed', sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 300;
   margin: 0 auto;
-  border: 1px solid #F5F5F5;
+  border: 1px transparent #F5F5F5;
   text-decoration: none;
+  backdrop-filter: blur(10px);
+}
+
+
+.btn-rent:hover {
+  background-color: #f5f5f5ae;
+  color: #525252;
+  border: 1px solid #f5f5f5;
+}
+
+.btn-dropedown{
+  text-align: right;
+  // font-size: small;
+  padding: 13px 30px;
+  // border-radius: 15px;
+  color: #F5F5F5;
+  // background-color: #f5f5f542;
+  // font-weight: 300;
+  text-decoration: none;
+  backdrop-filter: blur(10px);
+}
+.btn-dropedown:hover {
+  text-shadow: 0 0 0.5em #d2d2d2;
+  color: #F5F5F5;
+
 }
 
 .navbar-brand {
@@ -45,6 +70,8 @@
 }
 
 .dropdown-menu {
-  background-color: transparent;
+  background-color: #f5f5f542;
   color: white;
+  height: auto;
+  border-radius: 15px;
 }
