--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,6 +9,8 @@
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+  background: transparent;
+  color: #F5F5F5;
 }
 
 .navbar-lewagon .navbar-brand img {
@@ -29,6 +31,12 @@
   text-decoration: none;
 }
 
+.btn-rent:hover {
+  background: #F5F5F5;
+  color: #000;
+  border: 2px solid #000;
+}
+
 .navbar-brand {
   color:#F5F5F5;
 }
@@ -41,6 +49,13 @@
 
 .logo-group {
   gap: 20px;
+}
+
+.logo-group:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  transition-duration: 0.5s;
 }
 
 .dropdown-menu {
