--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,15 +1,19 @@
 <body class="outer">
   <%= render "shared/navbar" %>
-  <div class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="btn-container">
-        <div class="btn-input-search">Search a spaceship by location</div>
-        <%= link_to "Search", new_spaceship_path, class: "btn-search" %>
-      </div>
-    </div>
+  <div class="row justify-content-center">
+  <div class="col-sm-8 my-3">
+    <%= form_with url: spaceships_path, method: :get, class: "d-flex my-5" do %>
+      <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Type the name or location of the spaceship you are looking for..."
+        %>
+      <%= submit_tag "Search", name: "", class: "btn-search" %>
+    <% end %>
   </div>
+</div>
 
-  <div class="container">
+  <div class="container mt-4">
     <div class="cards">
       <% @spaceships.each do |spaceship| %>
         <div>
