--- a/app/assets/stylesheets/pages/_showuser.scss
+++ b/app/assets/stylesheets/pages/_showuser.scss
@@ -3,115 +3,60 @@ body {
 }
 
 
-.centertext{
-  background-color: #ffffff52;
-  padding: 50px;
-  border-radius: 15px;
-}
-
-.home-text {
-  margin: 15px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  color: #ffffff;
-  z-index:5;
-}
-.mainbox{
+.container-show{
   display: flex;
-  width: 100vw;
-}
-
-.subbox-1{
-  display: flex;
-  background-color: #ffffff7c;
-  text-align: center;
-  width: 70%;
-  border-radius: 15px;
-}
-.subbox-50{
-  width: 50%;
-}
-
-.subbox-2{
-  background-color: #ffffff6c;
-  margin :10px;
-  padding:20px;
-  width: 30%;
-}
-
-
-// spaceship card
-.displayflex{
-  display: flex;
+  flex-direction: column;
   justify-content: center;
-  white-space: nowrap;
-  padding-left: 400px;
-  height: 200px;
-  width: 500px;
-  overflow-x: scroll;
   align-items: center;
-  scrollbar-width: none;
-  border-right: 1px solid ;
-  position: relative;
-  // background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(62,62,62,0) 6%, rgba(139,139,139,0) 95%, rgba(255,255,255,0) 100%);
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
 
 }
-
-
-
-
-
-
-
-
-.cardusershow{
-  background-color: #ffffff6c;
-  border-radius: 15px;
-  padding: 20px;
-  margin: 10px;
-  width: auto;
-  height: auto;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-.cardusershow:hover{
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-  transition: 0.5s;
-}
-
-.spaceshipcircle{
-  top: 50%;
-  left: 50%;
-  transform: translate(0%, -50%);
-  width: 60px;
-  height: 60px;
+.show-img-round{
   border-radius: 50%;
-  background: #ffffff;
-  filter: grayscale(90%);
-
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  display: block;
+}
+.show-inner{
+  display: flex;
+  justify-content: space-evenly;
+  margin: 50px auto;
+  background-color: white;
 }
 
-#home-top-video:before {
+.show-inner-info{
+  background-color: aquamarine;
+  width: 30%;
+  padding: 67px;
+  margin: 10px;
+}
+.show-inner-spaceship{
+
+  background-color: rgb(72, 44, 110);
+  padding: 90px;
+  width: 70%;
+  margin: 10px;
+}
+
+
+.video-stick{
+  position: fixed;
+  top: 0;
+  z-index: -2;
+}
+
+#home-top-video-show:before {
   content: '';
-  position: absolute;
+  position: fixed;
   top:0;
   right:0;
   left:0;
   bottom:0;
-  z-index:1;
+  z-index:-1;
   background:linear-gradient(to right,rgba(65, 0, 255, 0.4),rgba(255, 0, 234, 0.224));
-}
-
-#home-top-video {
-  left: 0%;
-  top: 0%;
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-  position: absolute;
-  z-index: -1;
 }
