photo can be added now to the post

--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -12,6 +12,7 @@
           <%= simple_form_for @spaceship do |f| %>
             <%= f.input :name %>
             <%= f.input :location %>
+            <%= f.input :photo, as: :file %>
             <div class="d-flex">
               <%= f.input :cost %>
             </div>
