--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <h1><%= @spaceship.name %></h1>
+      <%= cl_image_tag @spaceship.photo.key, height: 300, width: 400, crop: :fill %>
       <table class="table table-bordered">
         <tbody>
           <tr>
