--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -10,7 +10,7 @@
     <div class="col-7">
 
       <div class="img-box">
-        <%= image_tag("spaceship_placeholder.jpg") %>
+        <%= image_tag(@spaceship.image_url) %>
       </div>
       <hr style="color: transparent;">
       <div class="descript-box">
