--- a/app/assets/stylesheets/spaceships/_show.scss
+++ b/app/assets/stylesheets/spaceships/_show.scss
@@ -38,8 +38,8 @@ body {
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .1);
   border: 1px solid rgba(255, 255, 255, 0.25);
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  max-height: 800px;
 }
 
 .descript-box {
