fix last cloudinary

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -49,6 +49,7 @@
   border: 1px solid #000;
   font-family: 'Space Grotesk', sans-serif;
   background-color: transparent;
+  background-color: #ffffff4f;
 }
 
 .card:hover{
