--- a/app/views/spaceships/show.html.erb
+++ b/app/views/spaceships/show.html.erb
@@ -12,7 +12,8 @@
         <% if @spaceship.photo.attached? %>
           <%= cl_image_tag @spaceship.photo.key, height: 300, width: 400, crop: :fill %>
         <% else %>
-          <%= image_tag "spaceship-placeholder.jpg", height: 300, width: 400 %>
+          <%#= cl_image_tag @spaceship.photo.key, height: 300, width: 400, crop: :fill %>
+          <%= image_tag "https://res.cloudinary.com/dikukph02/image/upload/v1709122519/development/9o6kky2q78jhs4snjuj9dnro0t5x.jpg", height: 300, width: 400 %>
         <% end%>
       </div>
       <hr style="color: transparent;">
